Various changes carried over from internal Metro project. Warning: breaking changes to APIs in this version!

--- a/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers.csproj
+++ b/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers.csproj
@@ -101,11 +101,15 @@
     <Compile Include="Converters\ToStringConverter.cs" />
     <Compile Include="Converters\ValidationErrorConverter.cs" />
     <Compile Include="DeferredBinder.cs" />
+    <Compile Include="Extensions\CompilerServices.cs" />
     <Compile Include="Extensions\Designer.cs" />
     <Compile Include="FrameworkElementAdorner.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="Interfaces\IDelegateCommand.cs" />
     <Compile Include="Interfaces\IMessageVisualizer.cs" />
+    <Compile Include="Interfaces\IUICommand.cs" />
     <Compile Include="Interfaces\IUIVisualizer.cs" />
+    <Compile Include="Interfaces\MessageVisualizerOptions.cs" />
     <Compile Include="Markup\LinearGradientBrushExtension.cs" />
     <Compile Include="Markup\ViewModelCreatorExtension.cs" />
     <Compile Include="Extensions\DependencyObjectExtensions.cs" />
@@ -128,11 +132,12 @@
     <Compile Include="Mvvm\EditingViewModel.cs" />
     <Compile Include="Mvvm\SimpleViewModel.cs" />
     <Compile Include="Mvvm\ViewModelLocator.cs" />
+    <Compile Include="UI\UICommand.cs" />
     <Compile Include="Validations\ValidatingViewModel.cs" />
     <Compile Include="UI\MessageVisualizer.cs" />
     <Compile Include="UI\TextPath.cs" />
     <Compile Include="Mvvm\ViewModel.cs" />
-    <Compile Include="Mvvm\DelegatingCommand.cs" />
+    <Compile Include="Mvvm\DelegateCommand.cs" />
     <Compile Include="Interfaces\IErrorVisualizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\WaitCursor.cs" />
