--- a/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers (3.5).csproj
+++ b/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers/Julmar.Wpf.Helpers (3.5).csproj
@@ -49,7 +49,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;NETV4</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Debug\JulMar.Wpf.Helpers.xml</DocumentationFile>
@@ -60,7 +60,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;NETV35</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\JulMar.Wpf.Helpers.xml</DocumentationFile>
@@ -102,13 +102,19 @@
     <Compile Include="Converters\NullOrEmptyBooleanConverter.cs" />
     <Compile Include="Converters\NullOrEmptyVisibilityConverter.cs" />
     <Compile Include="Converters\RefreshValueConverter.cs" />
+    <Compile Include="Converters\ToStringConverter.cs" />
     <Compile Include="Converters\ValidationErrorConverter.cs" />
     <Compile Include="DeferredBinder.cs" />
+    <Compile Include="Extensions\CompilerServices.cs" />
     <Compile Include="Extensions\Designer.cs" />
+    <Compile Include="Extensions\NotifyPropertyHelpers.cs" />
     <Compile Include="FrameworkElementAdorner.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="Interfaces\IDelegateCommand.cs" />
     <Compile Include="Interfaces\IMessageVisualizer.cs" />
+    <Compile Include="Interfaces\IUICommand.cs" />
     <Compile Include="Interfaces\IUIVisualizer.cs" />
+    <Compile Include="Interfaces\MessageVisualizerOptions.cs" />
     <Compile Include="Markup\LinearGradientBrushExtension.cs" />
     <Compile Include="Markup\ViewModelCreatorExtension.cs" />
     <Compile Include="Extensions\DependencyObjectExtensions.cs" />
@@ -127,14 +133,15 @@
     <Compile Include="Interfaces\INotificationVisualizer.cs" />
     <Compile Include="Mvvm\AsyncDelegateCommand.cs" />
     <Compile Include="Mvvm\CloseRequestEventArgs.cs" />
+    <Compile Include="Mvvm\DelegateCommand.cs" />
     <Compile Include="Mvvm\EditingViewModel.cs" />
     <Compile Include="Mvvm\SimpleViewModel.cs" />
     <Compile Include="Mvvm\ViewModelLocator.cs" />
+    <Compile Include="UI\UICommand.cs" />
     <Compile Include="Validations\ValidatingViewModel.cs" />
     <Compile Include="UI\MessageVisualizer.cs" />
     <Compile Include="UI\TextPath.cs" />
     <Compile Include="Mvvm\ViewModel.cs" />
-    <Compile Include="Mvvm\DelegatingCommand.cs" />
     <Compile Include="Interfaces\IErrorVisualizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\WaitCursor.cs" />
@@ -176,6 +183,17 @@
       <Project>{DDB17800-0841-47A1-8AF6-89DAB38DAE98}</Project>
       <Name>Julmar.Core %283.5%29</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Snippets\expandovm.snippet" />
+    <None Include="Snippets\mvvmprop.snippet" />
+    <None Include="Snippets\wpfdp.snippet" />
+    <None Include="Snippets\wpfdpa.snippet" />
+    <None Include="Snippets\wpfdpar.snippet" />
+    <None Include="Snippets\wpfdpfull.snippet" />
+    <None Include="Snippets\wpfdpo.snippet" />
+    <None Include="Snippets\wpfdpr.snippet" />
+    <None Include="Snippets\wpfnpc.snippet" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
