--- a/Metro/Test/SimpleMVVMTest/packages.config
+++ b/Metro/Test/SimpleMVVMTest/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Composition" version="1.0.10-rc" />
+  <package id="Microsoft.Composition" version="1.0.13-rc" targetFramework="winrt45" />
 </packages>
