--- a/Metro/Julmar.Metro.Behaviors/Julmar.Metro.Behaviors.csproj
+++ b/Metro/Julmar.Metro.Behaviors/Julmar.Metro.Behaviors.csproj
@@ -104,21 +104,29 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <ProjectReference Include="..\Julmar.Windows.Interactivity\Julmar.Windows.Interactivity.csproj">
+      <Project>{14c9ef46-36b0-4808-b5b7-0a6b17cc0dcc}</Project>
+      <Name>Julmar.Windows.Interactivity</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MVVMHelpers.Metro\Julmar.Metro.Helpers.csproj">
       <Project>{b640de74-aceb-4a7d-9fc5-14f58e63921f}</Project>
       <Name>Julmar.Metro.Helpers</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interactivity\ChangePropertyAction.cs" />
+    <Compile Include="Actions\ChangePropertyAction.cs" />
+    <Compile Include="Interactivity\ComparisonConditionType.cs" />
     <Compile Include="Interactivity\ComparisonLogic.cs" />
     <Compile Include="Interactivity\DataBindingHelper.cs" />
-    <Compile Include="Interactivity\DataTrigger.cs" />
+    <Compile Include="Triggers\DataTrigger.cs" />
     <Compile Include="Interactivity\DragPositionBehavior.cs" />
-    <Compile Include="Interactivity\GotoStateAction.cs" />
-    <Compile Include="Interactivity\InvokeCommand.cs" />
-    <Compile Include="Interactivity\PropertyChangedTrigger.cs" />
+    <Compile Include="Actions\GotoStateAction.cs" />
+    <Compile Include="Actions\InvokeCommand.cs" />
+    <Compile Include="Triggers\PropertyChangedTrigger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Triggers\ClickTrigger.cs" />
+    <Compile Include="Triggers\DoubleClickTrigger.cs" />
+    <Compile Include="Triggers\ViewModelTrigger.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
