--- a/Metro/Test/Julmar.Metro.Tests/Julmar.Metro.Tests.csproj
+++ b/Metro/Test/Julmar.Metro.Tests/Julmar.Metro.Tests.csproj
@@ -113,9 +113,16 @@
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollectionExtensionMoveTests.cs" />
+    <Compile Include="CollectionExtensionsTest.cs" />
+    <Compile Include="CollectionExtensionSwapTests.cs" />
     <Compile Include="DynamicComposerTests.cs" />
     <Compile Include="MessageMediatorTest.cs" />
+    <Compile Include="ObjectLockExtensionsTest.cs" />
+    <Compile Include="ObservableDictionaryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyObserverTest.cs" />
+    <Compile Include="ReaderWriterLockSlimExtensionsTest.cs" />
     <Compile Include="ViewModelLocatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
