--- a/Metro/Julmar.Metro.Behaviors/Julmar.Metro.Behaviors.csproj
+++ b/Metro/Julmar.Metro.Behaviors/Julmar.Metro.Behaviors.csproj
@@ -35,6 +35,7 @@
     <DefineConstants>TRACE;NETFX_CORE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\JulMar.Metro.Behaviors.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
