Added helper to enable ElementName binding in attached collections Changed InvokeCommandAction to pass trigger parameter if no CommandParameter is bound. Bumped version.

--- a/Metro/MVVMHelpers.Metro/Julmar.Metro.Helpers.csproj
+++ b/Metro/MVVMHelpers.Metro/Julmar.Metro.Helpers.csproj
@@ -111,6 +111,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Behaviors\EventCommander.cs" />
+    <Compile Include="Behaviors\NameScopeBinding.cs" />
     <Compile Include="Behaviors\StyleSetter.cs" />
     <Compile Include="Collections\ObservableDictionary.cs" />
     <Compile Include="Collections\WeakReferenceList.cs" />
