1) Fix for ViewModelLocator not creating secondary instance of ViewModel 2) Fix for ServiceLocator registering simple types 3) New unit tests for ServiceLocator and ViewModelLocator 4) Removed public ViewModelLocator, added new IViewModelLocator which can be replaced 5) Added ServiceLocatorResource and ViewModelLocatorResource for binding purposes

--- a/Metro/MVVMHelpers.Metro/Julmar.Metro.Helpers.csproj
+++ b/Metro/MVVMHelpers.Metro/Julmar.Metro.Helpers.csproj
@@ -144,8 +144,12 @@
     <Compile Include="MessageMediatorTargetAttribute.cs" />
     <Compile Include="Mvvm\AsyncDelegateCommand.cs" />
     <Compile Include="Mvvm\DelegateCommand.cs" />
+    <Compile Include="Interfaces\IViewModelLocator.cs" />
+    <Compile Include="Mvvm\ExportViewModelAttribute.cs" />
     <Compile Include="Mvvm\SimpleViewModel.cs" />
     <Compile Include="Mvvm\ViewModelLocator.cs" />
+    <Compile Include="Mvvm\ViewModelLocatorResource.cs" />
+    <Compile Include="Services\ServiceLocatorResource.cs" />
     <Compile Include="UI\UICommand.cs" />
     <Compile Include="Mvvm\ViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
