--- a/Metro/packages/repositories.config
+++ b/Metro/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\Test\AnumationTest\packages.config" />
   <repository path="..\Test\BouncingBalls\packages.config" />
   <repository path="..\Test\Julmar.Metro.Tests\packages.config" />
+  <repository path="..\Test\MultiPageNavigation\packages.config" />
   <repository path="..\Test\SimpleMVVMTest\packages.config" />
   <repository path="..\Test\TicTacToe\packages.config" />
   <repository path="..\Test\ViewModelInjection\packages.config" />
