--- a/Julmar.Wpf.Helpers/test/TestMvvmApp/TestMvvmApp.csproj
+++ b/Julmar.Wpf.Helpers/test/TestMvvmApp/TestMvvmApp.csproj
@@ -36,14 +36,10 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
-    <SccProjectName>
-    </SccProjectName>
-    <SccLocalPath>
-    </SccLocalPath>
-    <SccAuxPath>
-    </SccAuxPath>
-    <SccProvider>
-    </SccProvider>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -139,14 +135,13 @@
     <Compile Include="PropertyWindow.xaml.cs">
       <DependentUpon>PropertyWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Services\InternalMessageVisualizer.cs" />
     <Compile Include="ViewModels\AppPropertyViewModel.cs" />
     <Compile Include="ViewModels\ColorDialogViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ViewModels\Element.cs" />
-    <Compile Include="ViewModels\WinViewModel.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
